--- a/menu.html
+++ b/menu.html
@@ -1192,7 +1192,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Fichimori Rosso igt Salento<span class="price ">18 | 5</span></h3>
+    								<h3>Rosso igt Salento - Fichimori<span class="price ">18 | 5</span></h3>
     								<p class="">Cantina Tormaresca. Da bere freddo. Colore rosso rubino. Al naso prevalgono le note di frutta rossa, di fragola e lampone, seguite da delicate sensazioni di rosa canina. Al palato è fresco, sapido e scorrevole, caratterizzato da un ingresso morbido e un retrogusto fruttato.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
@@ -1200,7 +1200,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Serrano Rosso Conero doc<span class="price ">15,5 | 4</span></h3>
+    								<h3>Rosso Conero doc - Serrano<span class="price ">15,5 | 4</span></h3>
     								<p class="">Cantina Umani Ronchi. Colore rosso rubino con riflessi violacei. Profumo pulito di visciola matura. Gran polpa e gran rotondità di sapore, uniti ad una buona struttura garantiscono una piacevole bevibilità.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
@@ -1208,7 +1208,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Rubico Lacrima Morro Alba doc<span class="price ">16 | 4</span></h3>
+    								<h3>Lacrima Morro Alba doc - Rubico<span class="price ">16 | 4</span></h3>
     								<p class="">Cantina Marotti Campi. Rosso vivace con riflessi porpora. Ha un aroma gradevole e fruttato con richiami discreti ai fiori di ciliegio e alla viola. Il gusto è morbido, vellutato e sapido.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
@@ -1216,7 +1216,7 @@
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <h3>Achelo Syrah Cortona doc<span class="price ">23</span></h3>
+                                    <h3>Syrah Cortona doc - Achelo<span class="price ">23</span></h3>
                                     <p class="">Cantina La Braccesca - Antinori. Colore rosso rubino. Al naso regala profumi di frutti di bosco, sentori floreali di violetta e note di vaniglia, liquirizia e spezie scure. L&#x27;assaggio è morbido e avvolgente, con un piacevole finale balsamico e speziato.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
                                 </div>
                             </div>
@@ -1224,15 +1224,15 @@
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <h3>Santa Cristina Chianti Superiore docg<span class="price ">18</span></h3>
-                                    <p class="">Cantina Santa Cristina. Colore rosso rubino con riflessi violacei. Al naso è ricco, con note fruttate di marasca, erbe aromatiche e sensazioni balsamiche. Al palato è morbido, avvolgente, con tannini vellutati e un finale lungo e sapido.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
+                                    <h3>Chianti Superiore docg - Santa Cristina <span class="price ">18</span></h3>
+                                    <p class="">Cantina Santa Cristina. Colore rosso rubino con riflessi violacei. Al naso è ricco, con note fruttate di marasca, erbe aromatiche e sensazioni balsamiche. Al palato è morbido e avvolgente, con un finale lungo e sapido.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
                                 </div>
                             </div>
                         </div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Villa Bianchi Verdicchio doc<span class="price ">15,5 | 4</span></h3>
+    								<h3>Verdicchio doc - Villa Bianchi<span class="price ">15,5 | 4</span></h3>
     								<p class="">Cantina Umani Ronchi. Colore giallo paglierino brillante, con riflessi verdognoli. Al gusto esprime una piacevole struttura basata su note sapide e fresche, in cui risalta un finale con tipico sentore di mandorla.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
@@ -1240,7 +1240,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Casal di Serra Verdicchio Superiore Biologico doc<span class="price ">19</span></h3>
+    								<h3>Verdicchio Superiore Biologico doc - Casal di Serra <span class="price ">19</span></h3>
     								<p class="">Cantina Umani Ronchi. Colore giallo paglierino. Profumi intensi di fiori di campo, aromi di frutta a polpa gialla. Ricco e vellutato, con buona dose di freschezza e sapidità che bilancia l’eccellente morbidezza. Finale asciutto, persistente e fruttato.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
@@ -1264,15 +1264,15 @@
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <h3>Calafuria Rosato igt Salento<span class="price ">20</span></h3>
-                                    <p class="">Al naso spicca per note fruttate e agrumate di pompelmo rosa, fiori di arancio, unite a delicate sensazioni gelsomino e tiglio. Al palato è gradevolmente fresco, contraddistinto da un’ottima persistenza aromatica e da una delicata sapidità.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
+                                    <h3>Rosato igt Salento - Calafuria<span class="price ">20</span></h3>
+                                    <p class="">Cantina Tomaresca. Al naso spicca per note fruttate e agrumate di pompelmo rosa, fiori di arancio, unite a delicate sensazioni gelsomino e tiglio. Al palato è gradevolmente fresco, contraddistinto da un’ottima persistenza aromatica e da una delicata sapidità.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
                                 </div>
                             </div>
                         </div>
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <h3>Cuvée Royale Franciacorta docg<span class="price ">32</span></h3>
+                                    <h3>Franciacorta docg - Cuvée Royale<span class="price ">32</span></h3>
                                     <p class="">Cantina Marchesi Antinori. Colore giallo scarico, spuma cremosa con perlage fine e persistente. A livello aromatico si colgono note di pesca a polpa bianca, crosta di pane e lieviti. Notevole equilibrio e vivacità tipica del Brut.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
                                 </div>
                             </div>
@@ -1280,7 +1280,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Prosecco Treser docg<span class="price ">18 | 4</span></h3>
+    								<h3>Prosecco docg - Treser<span class="price ">18 | 4</span></h3>
     								<p class="">Cantina Serre di Pederiva. Brut. All’aspetto è giallo paglierino scarico con riflessi verdognoli, con spuma brillante e perlage fine e persistente. Frutta fresca e fiori estivi ne completano il profumo secco e croccante.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
