--- a/menu.html
+++ b/menu.html
@@ -84,7 +84,7 @@
     	<div class="grid-container">
     		<section class="grid-x grid-margin-x grid-margin-y" id="sushi" data-magellan-target="sushi">
     			<div class="small-12 cell">
-    				<h2 hidden>Sushi i Nostri Signature</h2>
+    				<h2>Sushi i Nostri Signature</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
     					<div class="cell">
     						<div class="card">
