--- a/asporto.html
+++ b/asporto.html
@@ -125,7 +125,7 @@
     	<div class="grid-container">
     		<div class="grid-x grid-margin-x">
     			<div class="small-12 large-8 cell">
-    				<section class="grid-x grid-margin-x grid-margin-y" id="sushi" data-magellan-target="sushi">
+    				<section hidden class="grid-x grid-margin-x grid-margin-y" id="sushi" data-magellan-target="sushi">
     					<div class="small-12 cell" hidden>
     						<h2 hidden>Sushi i Nostri Signature</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y" id="ecommerce-button-top">
