--- a/riserva-un-tavolo.html
+++ b/riserva-un-tavolo.html
@@ -127,7 +127,9 @@
             <form id="form" novalidate="novalidate" autocomplete="on">
                 <div class="grid-x grid-margin-x">
                     <div class="small-12 cell">
-                        <p>Il martedì non serviamo sushi.</p>
+                        <div class="callout success">
+                            <p>Il martedì non serviamo sushi.</p>
+                        </div>
                          <p>Includi in <strong>Quante persone*</strong> anche eventuali seggioloni. Esempio: 4 persone e 2 seggioloni, seleziona 6.</p>
                          <p><strong>* </strong> Indica un campo obbligatorio.</p>
                     </div>
