--- a/menu.html
+++ b/menu.html
@@ -361,7 +361,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/BocconcinidiPollo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Bocconcini di Pollo">
     								<h3>Bocconcini di Pollo<span class="price ">6,5</span></h3>
-    								<p>Serviti con salsa piccante.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Serviti con salsa piccante (10 pezzi).<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -370,7 +370,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/OliveallAscolana_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Olive all&#x27;Ascolana">
     								<h3>Olive all&#x27;Ascolana<span class="price ">5,9</span></h3>
-    								<p>Il più tipico street food marchigiano.<span class=""><br><small>Allergeni: Glutine, Uova, Latte, Sedano</small></span></p>
+    								<p>Il più tipico street food marchigiano (8 pezzi).<span class=""><br><small>Allergeni: Glutine, Uova, Latte, Sedano</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -379,7 +379,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/Falafel_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Falafel">
     								<h3>Falafel<span class="price ">5,9</span></h3>
-    								<p>Falafel di ceci, mais, cipolle e zucchine. Serviti con salsa tzatziki fatta in casa.<span class=""><br><small>Allergeni: Glutine, Sedano, Senape</small></span></p>
+    								<p>Falafel di ceci, mais, cipolle e zucchine. Serviti con salsa tzatziki fatta in casa (8 pezzi).<span class=""><br><small>Allergeni: Glutine, Sedano, Senape</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -406,7 +406,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/AlettediPollo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Alette di Pollo">
     								<h3>Alette di Pollo<span class="price ">5,9</span></h3>
-    								<p>Leggermente piccanti.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Leggermente piccanti (4 pezzi).<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -415,7 +415,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/AlettediPolloPiccanti_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Alette di Pollo Piccanti">
     								<h3>Alette di Pollo Piccanti<span class="price ">5,9</span></h3>
-    								<p>Piccanti.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Piccanti (4 pezzi).<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
