--- a/menu.html
+++ b/menu.html
@@ -361,7 +361,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/BocconcinidiPollo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Bocconcini di Pollo">
     								<h3>Bocconcini di Pollo<span class="price ">6,5</span></h3>
-    								<p>Serviti con salsa piccante (10 pezzi).<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>SBocconcini di petto di pollo. Serviti con salsa piccante fatta in casa (10 pezzi).<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
