--- a/menu.html
+++ b/menu.html
@@ -397,7 +397,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/PeperonciniPiccanti_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Peperoncini Piccanti">
     								<h3>Peperoncini Piccanti<span class="price ">6,5</span></h3>
-    								<p>Peperoncini piccanti ripieni di robiola e avvolti in pancetta.<span class=""><br><small>Allergeni: Anidride Solforosa e Solfiti, Latte</small></span></p>
+    								<p>Peperoncini piccanti ripieni di robiola e avvolti in pancetta (2 pezzi).<span class=""><br><small>Allergeni: Anidride Solforosa e Solfiti, Latte</small></span></p>
     							</div>
     						</div>
     					</div> -->
