--- a/menu.html
+++ b/menu.html
@@ -331,7 +331,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/NigiriGamberoalVapore_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Nigiri Gambero al Vapore">
@@ -339,7 +339,7 @@
     								<p>Gambero al vapore su riso (2 pezzi).<span class=""><br><small>Allergeni: Crostacei</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
