--- a/menu.html
+++ b/menu.html
@@ -1105,11 +1105,19 @@
     							</div>
     						</div>
     					</div>
+                        <!-- <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Zona Mugnetti 50cl<span class="price ">6,5</span></h3>
+                                    <p class="">Birrificio Mukkeller. Belgian Ale 6%. Colore arancio chiaro, gusto morbido con sentori di arance e limoni.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Poculator 50cl<span class="price ">6</span></h3>
-    								<p class="">Rossa tedesca 7,6%. Birrificio Scheyern.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+    								<p class="">Birrificio Scheyern. Rossa tedesca 7,6%.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
     					</div>
