--- a/menu.html
+++ b/menu.html
@@ -726,7 +726,7 @@
                                 </div>
                             </div>
                         </div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Entrecote_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Entrecôte">
@@ -734,7 +734,7 @@
     								<p>250 grammi circa di Entrecôte (controfiletto) di manzetta Red Hereford irlandese.<span class=""><br><small>Allergeni: --</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
