--- a/torte-compleanno.html
+++ b/torte-compleanno.html
@@ -105,11 +105,11 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Lampone e Pistacchio<span class="price ">4&thinsp;€ a porzione (min. 6 porzioni)</span></h3>
+    								<h3>Amarene e Pistacchio<span class="price ">4&thinsp;€ a porzione (min. 6 porzioni)</span></h3>
     								<p>Biscotto al pistacchio.<br>
     									Croccantino al pistacchio.<br>
     									Cremoso al pistacchio.<br>
-    									Mousse leggera al lampone.
+    									Mousse leggera all'amarena.
     								</p>
     							</div>
     						</div>
@@ -156,7 +156,7 @@
     							<div class="card-section">
     								<h3>Millefoglie<span class="price ">4&thinsp;€ a porzione (min. 6 porzioni)</span></h3>
     								<p>Sfoglia croccante.<br>
-    									Crema chantilly con gocce di cioccolato / croccantino / frutti di bosco / fragole.
+    									Crema chantilly con gocce di cioccolato o croccantino o frutti di bosco o fragole.
     								</p>
     							</div>
     						</div>
