--- a/menu.html
+++ b/menu.html
@@ -602,7 +602,7 @@
                                 <div class="card-section">
                                     <img src="assets/img/prod/California_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="California">
                                     <h3>California<span class="price ">13,4</span></h3>
-                                    <p>Burger di manzo (180 grammi), cheddar, bacon croccante, salsa guacamole, salsa piccante.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+                                    <p>Burger di manzo (180 grammi), cheddar, bacon croccante, cipolla rossa in agrodolce, salsa guacamole, salsa piccante.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
                                 </div>
                             </div>
                         </div>
@@ -611,7 +611,7 @@
                                 <div class="card-section">
                                     <img src="assets/img/prod/CaliforniaDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="California Doppio">
                                     <h3>California Doppio<span class="price ">17,9</span></h3>
-                                    <p>Doppio burger di manzo (360 grammi), cheddar, bacon croccante, salsa guacamole, salsa piccante.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+                                    <p>Doppio burger di manzo (360 grammi), cheddar, bacon croccante, cipolla rossa in agrodolce,salsa guacamole, salsa piccante.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
                                 </div>
                             </div>
                         </div>
