--- a/menu.html
+++ b/menu.html
@@ -347,7 +347,7 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/OliveallAscolana_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Olive all&#x27;Ascolana">
@@ -355,7 +355,7 @@
     								<p>Il più tipico street food marchigiano (8 pezzi).<span class=""><br><small>Allergeni: Glutine, Uova, Latte, Sedano</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
