--- a/menu.html
+++ b/menu.html
@@ -1226,14 +1226,14 @@
                                 </div>
                             </div>
                         </div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Verdicchio doc - Villa Bianchi<span class="price ">15,5 | 4</span></h3>
     								<p class="">Cantina Umani Ronchi. Colore giallo paglierino brillante, con riflessi verdognoli. Al gusto esprime una piacevole struttura basata su note sapide e fresche, in cui risalta un finale con tipico sentore di mandorla.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
