--- a/menu.html
+++ b/menu.html
@@ -735,7 +735,7 @@
     							</div>
     						</div>
     					</div>
-                        <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <img src="assets/img/prod/Arrosticini_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Arrosticini">
@@ -744,7 +744,7 @@
                                 </div>
                             </div>
                         </div>
-    				</div>
+    				</div> -->
     			</div>
     		</section>
     		<section class="grid-x grid-margin-x grid-margin-y" id="dolce" data-magellan-target="dolce">
