--- a/menu.html
+++ b/menu.html
@@ -82,7 +82,7 @@
     </div>
     <div id="menupage-text">
     	<div class="grid-container">
-    		<!-- <section class="grid-x grid-margin-x grid-margin-y" id="sushi" data-magellan-target="sushi">
+    		<section class="grid-x grid-margin-x grid-margin-y" id="sushi" data-magellan-target="sushi">
     			<div class="small-12 cell">
     				<h2>Sushi i Nostri Signature</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
@@ -333,7 +333,7 @@
     					</div>
     				</div>
     			</div>
-    		</section> -->
+    		</section>
     		<section class="grid-x grid-margin-x grid-margin-y" id="perStuzzicare" data-magellan-target="perStuzzicare">
     			<div class="small-12 cell">
     				<h2>Per Stuzzicare</h2>
@@ -889,14 +889,22 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Weisse<span class="price ">4 | 6 | 12</span></h3>
+                                    <p class="">Weisse 5,4%. Birrificio Kapuziner-Moenchshof.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Italicum<span class="price ">4 | 6 | 12</span></h3>
     								<p class="">Bionda fruttata senza glutine 5,0%. Birrificio dei Castelli.<span class=""><br><small>Allergeni: --</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -961,14 +969,14 @@
     							</div>
     						</div>
     					</div> -->
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Brevis Furor<span class="price ">4 | 6,5 | 13</span></h3>
     								<p class="">IPA 6,3%. Birrificio dei Castelli.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
                         <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
@@ -1001,14 +1009,14 @@
     							</div>
     						</div>
     					</div> -->
-    				    <!-- <div class="cell">
+    				    <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Hattori Hanzo<span class="price ">4 | 6,5 | 13</span></h3>
     								<p class="">Doppia IPA 8,3%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
