--- a/menu.html
+++ b/menu.html
@@ -836,6 +836,15 @@
     						</div>
     					</div>
     				</div>
+                    <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Succo alla Pesca<span class="price ">3</span></h3>
+                                    <p class="">Yoga 20cl.<span class="hide"><br><small>Allergeni: nessuno</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
     			</div>
     		</section>
     		<section class="grid-x grid-margin-x grid-margin-y" id="caffe" data-magellan-target="caffe">
