--- a/menu.html
+++ b/menu.html
@@ -838,7 +838,7 @@
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <h3>Succo alla Pesca<span class="price ">3</span></h3>
+                                    <h3>Succo alla Pesca 70%<span class="price ">3,5</span></h3>
                                     <p class="">Yoga 20cl.<span class="hide"><br><small>Allergeni: nessuno</small></span></p>
                                 </div>
                             </div>
@@ -893,14 +893,14 @@
     						<div class="card">
     							<div class="card-section">
     								<h3>Helles<span class="price ">4 | 6 | 12</span></h3>
-    								<p class="">Helles stile tedesco non amara 4,9%. Birrificio Forst.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+    								<p class="">Helles stile tedesco non amara 4,8%. Birrificio Forst.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
     					</div>
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <h3>Weisse<span class="price ">4 | 6 | 12</span></h3>
+                                    <h3>Weisse<span class="price ">4 | 6,5 | 13</span></h3>
                                     <p class="">Weisse 5,4%. Birrificio Kapuziner-Moenchshof.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
                             </div>
@@ -1070,14 +1070,14 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Vitamina MU 50cl<span class="price ">6,5</span></h3>
                                     <p class="">Birrificio Mukkeller. Lager 4,6%. Birra pensata per l'estate, per ammazzare quella sete che non passa mai. Molto chiara, leggera e luppolata solo con i fiori. Con poco amaro e abbastanza secca.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
