--- a/menu.html
+++ b/menu.html
@@ -1202,14 +1202,14 @@
     			<div class="small-12 cell">
     				<h2>Vino<small>Bottiglia | Calice</small></h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Rosso igt Salento - Fichimori<span class="price ">18 | 5</span></h3>
     								<p class="">Cantina Tormaresca. Da bere freddo. Colore rosso rubino. Al naso prevalgono le note di frutta rossa, di fragola e lampone, seguite da delicate sensazioni di rosa canina. Al palato è fresco, sapido e scorrevole, caratterizzato da un ingresso morbido e un retrogusto fruttato.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
