--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -223,14 +223,14 @@
     					<li class="accordion-item" data-accordion-item>
     					  	<a href="#torteFaq" class="accordion-title">Posso portare una torta da casa?</a>
     					  	<div class="accordion-content" data-tab-content id="torteFaq">
-    						  	<p>Non accettiamo torte anche se di pasticceria<strong> e non possiamo neppure tenerle in frigo o freezer nel caso la portiate per errore</strong>. Più in generale, non accettiamo alcun prodotto dall'esterno inclusi vini e bevande.</p>
+    						  	<p>Non accettiamo torte anche se di pasticceria<strong> e non possiamo neppure tenerle in frigo o freezer nel caso le portiate per errore</strong>. Più in generale, non accettiamo alcun prodotto dall'esterno inclusi vini e bevande.</p>
     						  	Se per una ricorrenza gradite una torta:
     						  	<ul class="bullet">
     								<li>Possiamo farvi uno dei nostri dolci a torta con almeno 2 giorni di preavviso.</li>
     								<li>Possiamo far preparare una torta dalla nostra pasticceria di fiducia con almeno 4 giorni di preavviso.</li>
     						  	</ul>
     						  	<br>
-    						  	<p><a class="button" href="torte-compleanno.html">Lista e prezzi torte compleanno</a></p>
+    						  	<p><a class="button" href="torte-ricorrenze.html">Lista e prezzi torte per ricorrenze</a></p>
     					  	</div>
     					</li>
     					<li class="accordion-item" data-accordion-item>
