--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     		</div>
     		<div class="grid-x grid-margin-x grid-margin-y">
     			<div class="medium-6 cell">
-    				<a href="asporto"><img src="assets/img/cover/cover-asporto.jpg" alt="Una nuova Armonia da Asporto. Sushi e Hamburger." class="extra-space-image-tab-home"></a>
+    				<a href="asporto.html"><img src="assets/img/cover/cover-asporto.jpg" alt="Una nuova Armonia da Asporto. Sushi e Hamburger." class="extra-space-image-tab-home"></a>
     			</div>
     			<div class="medium-6 cell">
     				<p>Stai guardando la tua serie tv preferita da sola o con le amiche e gli amici e hai voglia di mettere qualcosa sotto i denti? Stai tifando per la tua squadra del cuore e ti è venuto un certo languore?</p>
@@ -169,6 +169,31 @@
     			</div>
     		</div>
     	</div>
+    </div>
+    <div class="panel-home-n">
+        <div class="grid-container">
+            <div class="grid-x grid-margin-x grid-margin-y">
+                <div class="small-12 cell">
+                    <h1>Ricorrenze</h1>
+                </div>
+            </div>
+            <div class="grid-x grid-margin-x grid-margin-y">
+                <div class="medium-6 cell">
+                    <a href="torte-ricorrenze.html"><img src="assets/img/cover/cover-torte-compleanno.jpg" alt="Ca' Vecchia Beerstrot Torte Compleanno" class="extra-space-image-tab-home"></a>
+                </div>
+                <div class="medium-6 cell">
+                    <p>Vuoi festeggiare il tuo compleanno o una ricorrenza a <strong>Ca' Vecchia Beerstrot</strong>?</p>
+                    <p>Da sapere prima di prenotare:
+                    	<ul>
+                            <li>Accettiamo un massimo di 12 persone; se siete di più sarete disposti su più tavoli vicini.</li>
+                            <li>Non accettiamo torte anche se di pasticceria<strong> e non possiamo neppure tenerle in frigo o freezer nel caso la portiate per errore</strong>. Più in generale, non accettiamo alcun prodotto dall'esterno inclusi vini e bevande.</li>
+                        </ul>
+                    </p>
+                    <p>Per una lista delle torte che possiamo realizzare clicca il seguente bottone:</p>
+                    <a href="torte-ricorrenze.html" class="button">Lista e prezzi torte per ricorrenze</a>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="panel-home-n">
     	<div class="grid-container">
