--- a/menu.html
+++ b/menu.html
@@ -1274,14 +1274,14 @@
     							</div>
     						</div>
     					</div>
-                        <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Rosato igt Salento - Calafuria<span class="price">20</span></h3>
                                     <p class="">Cantina Tomaresca. Al naso spicca per note fruttate e agrumate di pompelmo rosa, fiori di arancio, unite a delicate sensazioni gelsomino e tiglio. Al palato è gradevolmente fresco, contraddistinto da un’ottima persistenza aromatica e da una delicata sapidità.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
