--- a/menu.html
+++ b/menu.html
@@ -838,7 +838,7 @@
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <h3>Succo alla Pesca 70%<span class="price">3,5</span></h3>
+                                    <h3>Succo alla Pesca<span class="price">3,5</span></h3>
                                     <p class="">Yoga 20cl.<span class="hide"><br><small>Allergeni: nessuno</small></span></p>
                                 </div>
                             </div>
