--- a/menu.html
+++ b/menu.html
@@ -1298,7 +1298,15 @@
     							</div>
     						</div>
     					</div>
-    				</div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Spumante Dolce<span class="price">14</span></h3>
+                                    <p class="">Cantina Serre di Pederiva. Brut. All’aspetto è giallo paglierino scarico con riflessi verdognoli, con spuma brillante e perlage fine e persistente. Frutta fresca e fiori estivi ne completano il profumo secco e croccante.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
     			</div>
     		</section>
     		<section class="grid-x grid-margin-x grid-margin-y" id="liquore" data-magellan-target="liquore">
