--- a/menu.html
+++ b/menu.html
@@ -1302,7 +1302,7 @@
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Spumante Dolce<span class="price">14</span></h3>
-                                    <p class="">Cantina Serre di Pederiva. Si presenta con colore giallo paglierino scarico, con spuma sottile assieme a perlage fine e persistente. Esprime gentili sentori floreali e fruttati, al palato si presenta gradevolmente amabile e vellutato.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
+                                    <p class="">Cantina Serre di Pederiva. Colore giallo paglierino scarico, spuma sottile con perlage fine e persistente. Esprime gentili sentori floreali e fruttati, al palato si presenta gradevolmente amabile e vellutato.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
                                 </div>
                             </div>
                         </div>
