--- a/menu.html
+++ b/menu.html
@@ -154,7 +154,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/RollGamberoRosso_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Roll Gambero Rosso">
@@ -162,7 +162,7 @@
     								<p>Salmone e avocado ricoperti da gamberi rossi (8 pezzi).<span class=""><br><small>Allergeni: Crostacei, Pesce, Latte, Frutta a guscio</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -322,7 +322,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!--<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/NigiriGamberoRosso_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Nigiri Gambero Rosso">
@@ -330,7 +330,7 @@
     								<p>Gambero rosso su riso (2 pezzi).<span class=""><br><small>Allergeni: Crostacei</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     				</div>
     			</div>
     		</section>
