--- a/menu.html
+++ b/menu.html
@@ -1274,11 +1274,11 @@
     							</div>
     						</div>
     					</div>
-                        <!-- <div class="cell">
+                        <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <h3>Rosato igt Salento - Calafuria<span class="price">20</span></h3>
-                                    <p class="">Cantina Tomaresca. Al naso spicca per note fruttate e agrumate di pompelmo rosa, fiori di arancio, unite a delicate sensazioni gelsomino e tiglio. Al palato è gradevolmente fresco, contraddistinto da un’ottima persistenza aromatica e da una delicata sapidità.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
+                                    <h3>Rosato igt biologico - Centovie<span class="price">18</span></h3>
+                                    <p class="">Cantina Umani Ronchi. Delicato rosa quarzo. Al naso profuma di giacinto e di rosa, di lampone e melograno, di rosmarino e caramella di liquirizia. In bocca ha acidità agrumata, è vivo e sapido.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
                                 </div>
                             </div>
                         </div> -->
