--- a/menu.html
+++ b/menu.html
@@ -1278,7 +1278,7 @@
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Rosato igt biologico - Centovie<span class="price">18</span></h3>
-                                    <p class="">Cantina Umani Ronchi. Delicato rosa quarzo. Al naso profuma di giacinto e di rosa, di lampone e melograno, di rosmarino e caramella di liquirizia. In bocca ha acidità agrumata, è vivo e sapido.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
+                                    <p class="">Cantina Umani Ronchi. Colore rosa quarzo. Al naso profuma di giacinto e di rosa, di lampone e melograno, di rosmarino e caramella di liquirizia. In bocca ha acidità agrumata, è vivo e sapido.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
                                 </div>
                             </div>
                         </div> -->
