--- a/menu.html
+++ b/menu.html
@@ -977,14 +977,14 @@
     							</div>
     						</div>
     					</div> -->
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Brevis Furor<span class="price">4 | 6,5 | 13</span></h3>
     								<p class="">IPA 6,3%. Birrificio dei Castelli.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
                         <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
@@ -1017,14 +1017,14 @@
     							</div>
     						</div>
     					</div> -->
-    				    <div class="cell">
+    				    <!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Hattori Hanzo<span class="price">4 | 6,5 | 13</span></h3>
     								<p class="">Doppia IPA 8,3%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -1110,14 +1110,14 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Mazzu de Fiuri 50cl<span class="price">6,5</span></h3>
     								<p class="">Birrificio Mukkeller. IPA 6%. Birra bionda dall&#x27;amaro persistente e speziato.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
@@ -1277,7 +1277,7 @@
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <h3>Rosato igt biologico - Centovie<span class="price">18</span></h3>
+                                    <h3>Rosato igt biologico - Centovie<span class="price">18 | 4</span></h3>
                                     <p class="">Cantina Umani Ronchi. Colore rosa quarzo. Al naso profuma di giacinto e di rosa, di lampone e melograno, di rosmarino e caramella di liquirizia. In bocca ha acidità agrumata, è vivo e sapido.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
                                 </div>
                             </div>
