--- a/menu.html
+++ b/menu.html
@@ -735,7 +735,7 @@
     							</div>
     						</div>
     					</div> -->
-                        <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <img src="assets/img/prod/Arrosticini_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Arrosticini">
@@ -743,7 +743,7 @@
                                     <p>Arrosticini artigianali di pecora (12 pezzi).<span class=""><br><small>Allergeni: --</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
     				</div>
     			</div>
     		</section>
@@ -1118,14 +1118,14 @@
     							</div>
     						</div>
     					</div> -->
-                        <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Variante IPA 50cl<span class="price">6,5</span></h3>
                                     <p class="">Birrificio Mukkeller. IPA 6,6%. Birra con un buon corpo, succosa con un amaro deciso. In bocca frutta gialla matura, agrumi e frutta tropicale.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -1281,7 +1281,7 @@
                                     <p class="">Cantina Umani Ronchi. Colore rosa quarzo. Al naso profuma di giacinto e di rosa, di lampone e melograno, di rosmarino e caramella di liquirizia. In bocca ha acidità agrumata, è vivo e sapido.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
