--- a/menu.html
+++ b/menu.html
@@ -692,7 +692,7 @@
     			<div class="small-12 cell">
     				<h2>Hamburger Vegetariani<small>Serviti con patate fritte</small></h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-                        <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <img src="assets/img/prod/VegetarianoMediterraneo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Vegetariano Mediterraneo">
@@ -700,7 +700,7 @@
                                     <p>Burger di verdure (zucchine, peperoni, pomodori secchi, cipolle, melanzane), insalata, cipolla in agrodolce e maionese vegana.<span class=""><br><small>Allergeni: Glutine, Sedano, Latte, Uova</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
